--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <link href="vendor/ionic/release/css/ionic.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
