Remove minifying JS cuz angular no likey

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     -->
 
     <!-- ionic/angularjs js -->
-    <script src="vendor/ionic/release/js/ionic.bundle.js"></script>
+    <script src="vendor/ionic/release/js/ionic.bundle.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
