--- a/app/index.html
+++ b/app/index.html
@@ -20,17 +20,21 @@
 
     <!-- your app's js -->
     <script src="js/cordovainit.js"></script>
+    <script src="js/homecontroller.js"></script>
+    <script src="js/logincontroller.js"></script>
     <script src="js/app.js"></script>
 
 </head>
-<body ng-app="starter">
-
-<ion-pane>
-    <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-    </ion-header-bar>
-    <ion-content>
-    </ion-content>
-</ion-pane>
+<body ng-app="sardroid">
+<ion-nav-bar class="bar-stable">
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+</ion-nav-bar>
+<!--
+  The views will be rendered in the <ion-nav-view> directive below
+  Templates are in the /templates folder (but you could also
+  have templates inline in this html file if you'd like).
+-->
+<ion-nav-view></ion-nav-view>
 </body>
 </html>
