--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
     <script src="js/cordovainit.js"></script>
     <script src="js/homecontroller.js"></script>
     <script src="js/logincontroller.js"></script>
+    <script src="js/contactscontroller.js"></script>
     <script src="js/app.js"></script>
 
 </head>
