--- a/app/index.html
+++ b/app/index.html
@@ -20,9 +20,9 @@
 
     <!-- your app's js -->
     <script src="js/cordovainit.js"></script>
-    <script src="js/homecontroller.js"></script>
-    <script src="js/logincontroller.js"></script>
-    <script src="js/contactscontroller.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/login.js"></script>
+    <script src="js/contacts.js"></script>
     <script src="js/app.js"></script>
 
 </head>
