--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="vendor/ionic/release/js/ionic.bundle.min.js"></script>
+    <script src="vendor/ngCordova/dist/ng-cordova.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
