Add working contacts fetching

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     -->
 
     <!-- ionic/angularjs js -->
-    <script src="vendor/ionic/release/js/ionic.bundle.min.js"></script>
+    <script src="vendor/ionic/js/ionic.bundle.min.js"></script>
     <script src="vendor/ngCordova/dist/ng-cordova.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
