--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <script src="js/login.js"></script>
     <script src="js/contacts.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/userprofile.js"></script>
 
 </head>
 <body ng-app="sardroid">
