--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,9 @@
     <script src="js/home.js"></script>
     <script src="js/login.js"></script>
     <script src="js/contacts.js"></script>
-    <script src="js/app.js"></script>
     <script src="js/userprofile.js"></script>
+    <script src="js/call.js"></script>
+    <script src="js/app.js"></script>
 
 </head>
 <body ng-app="sardroid">
