--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
     <script src="js/contacts.js"></script>
     <script src="js/userprofile.js"></script>
     <script src="js/call.js"></script>
+    <script src="js/peerhandler.js"></script>
     <script src="js/app.js"></script>
 
 </head>
