More work on PeerJS connections

--- a/app/index.html
+++ b/app/index.html
@@ -52,8 +52,7 @@
         <ion-content>
             <ul class="list">
                 <!-- Note each link has the 'menu-close' attribute so the menu auto closes when clicking on one of these links -->
-                <a href="#" class="item" menu-close>Item 1</a>
-                <a href="#" class="item" menu-close>Item 2</a>
+                <a href="#/login" class="item" menu-close>Log out</a>
             </ul>
         </ion-content>
     </ion-side-menu>
