--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <script src="vendor/ionic/js/ionic.bundle.min.js"></script>
     <script src="vendor/ngCordova/dist/ng-cordova.js"></script>
     <script src="vendor/peerjs/peer.min.js"></script>
+    <script src="vendor/lodash/lodash.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
