--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <script src="vendor/ngCordova/dist/ng-cordova.js"></script>
     <script src="vendor/peerjs/peer.min.js"></script>
     <script src="vendor/lodash/lodash.min.js"></script>
+    <script src="vendor/ngstorage/ngStorage.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
