--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
     <script src="js/app.js"></script>
 
 </head>
-<body ng-app="sardroid">
+<body ng-app="sardroid" ng-strict-di>
 <ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
         <ion-nav-bar class="bar-positive">
