--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
     <script src="js/logout.js"></script>
     <script src="js/contacts.js"></script>
     <script src="js/userprofile.js"></script>
+    <script src="js/drawinghandler.js"></script>
     <script src="js/call.js"></script>
     <script src="js/peerhandler.js"></script>
     <script src="js/app.js"></script>
