--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <script src="vendor/peerjs/peer.min.js"></script>
     <script src="vendor/lodash/lodash.min.js"></script>
     <script src="vendor/ngstorage/ngStorage.min.js"></script>
-    <script src="vendor/fabric.js/dist/fabric.min.js"></script>
+    <script src="vendor/fabric.js/dist/fabric.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
