Add angular module for playing audio

--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,11 @@
     <script src="js/drawinghandler.js"></script>
     <script src="js/call.js"></script>
     <script src="js/peerhandler.js"></script>
+    <script src="js/audiohandler.js"></script>
     <script src="js/app.js"></script>
-
+    <audio class="call" loop>
+        <source src="res/sounds/incoming.mp3" type="audio/mpeg">
+    </audio>
 </head>
 <body ng-app="sardroid" ng-strict-di>
 <ion-side-menus enable-menu-with-back-views="false">
