--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,9 @@
     <audio class="call" loop>
         <source src="res/sounds/incoming.mp3" type="audio/mpeg">
     </audio>
+    <audio class="dial">
+        <source src="res/sounds/dial.wav" type="audio/wav"></source>
+    </audio>
 </head>
 <body ng-app="sardroid" ng-strict-di>
 <ion-side-menus enable-menu-with-back-views="false">
