Add translation support

--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,10 @@
     <script src="vendor/peerjs/peer.min.js"></script>
     <script src="vendor/lodash/lodash.min.js"></script>
     <script src="vendor/ngstorage/ngStorage.min.js"></script>
+    <script src="vendor/angular-translate/angular-translate.min.js"></script>
+    <script src="vendor/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
     <script src="vendor/fabric.js/dist/fabric.js"></script>
-    
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
