--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
             <ion-content>
                 <ul class="list">
                     <!-- Note each link has the 'menu-close' attribute so the menu auto closes when clicking on one of these links -->
-                    <a ng-controller="LogoutCtrl" ng-click="logout()" class="item" menu-close>Log out</a>
+                    <a ng-controller="LogoutCtrl" ng-click="logout()" class="item" menu-close>{{'LOG_OUT' | translate}}</a>
                 </ul>
             </ion-content>
         </ion-side-menu>
