Add socket.io client library

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <script src="vendor/angular-translate/angular-translate.min.js"></script>
     <script src="vendor/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
     <script src="vendor/fabric.js/dist/fabric.js"></script>
+    <script src="vendor/socket.io-client/socket.io.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
