--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
     <script src="js/call.js"></script>
     <script src="js/peerhandler.js"></script>
     <script src="js/audiohandler.js"></script>
+    <script src="js/sockethandler.js"></script>
     <script src="js/app.js"></script>
     <audio class="call" loop>
         <source src="res/sounds/incoming.mp3" type="audio/mpeg">
