--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <link href="css/app.css" rel="stylesheet">
 
     <!-- Vendor things (downloaded from bower) go here -->
-    <script src="vendor/ionic/js/ionic.bundle.min.js"></script>
+    <script src="vendor/ionic/js/ionic.bundle.js"></script>
     <script src="vendor/ngCordova/dist/ng-cordova.js"></script>
     <script src="vendor/peerjs/peer.min.js"></script>
     <script src="vendor/lodash/lodash.min.js"></script>
@@ -25,17 +25,20 @@
 
     <!-- The app javascript files -->
     <script src="js/cordovainit.js"></script>
-    <script src="js/home.js"></script>
     <script src="js/login.js"></script>
     <script src="js/logout.js"></script>
     <script src="js/contacts.js"></script>
     <script src="js/userprofile.js"></script>
-    <script src="js/drawinghandler.js"></script>
     <script src="js/call.js"></script>
+
     <script src="js/peerhandler.js"></script>
+    <script src="js/drawinghandler.js"></script>
     <script src="js/audiohandler.js"></script>
+    <script src="js/confighandler.js"></script>
     <script src="js/sockethandler.js"></script>
+
     <script src="js/app.js"></script>
+
     <audio class="call" loop>
         <source src="res/sounds/incoming.mp3" type="audio/mpeg">
     </audio>
