--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
     <!-- The app javascript files -->
     <script src="js/cordovainit.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/signup.js"></script>
     <script src="js/logout.js"></script>
     <script src="js/contacts.js"></script>
     <script src="js/userprofile.js"></script>
