Refactoring application layout

--- a/app/index.html
+++ b/app/index.html
@@ -25,18 +25,19 @@
 
     <!-- The app javascript files -->
     <script src="js/cordovainit.js"></script>
-    <script src="js/login.js"></script>
-    <script src="js/signup.js"></script>
-    <script src="js/logout.js"></script>
+    <script src="js/controllers/login.js"></script>
+    <script src="js/controllers/signup.js"></script>
+    <script src="js/controllers/logout.js"></script>
     <script src="js/contacts.js"></script>
-    <script src="js/userprofile.js"></script>
-    <script src="js/call.js"></script>
+    <script src="js/controllers/userprofile.js"></script>
+    <script src="js/controllers/call.js"></script>
 
-    <script src="js/peerhandler.js"></script>
-    <script src="js/drawinghandler.js"></script>
-    <script src="js/audiohandler.js"></script>
-    <script src="js/confighandler.js"></script>
-    <script src="js/sockethandler.js"></script>
+    <script src="js/services/peerhandler.js"></script>
+    <script src="js/services/drawinghandler.js"></script>
+    <script src="js/services/audiohandler.js"></script>
+    <script src="js/services/confighandler.js"></script>
+    <script src="js/services/sockethandler.js"></script>
+    <script src="js/services/contactshandler.js"></script>
 
     <script src="js/app.js"></script>
 
