--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
     <script src="js/cordovainit.js"></script>
     <script src="js/controllers/login.js"></script>
     <script src="js/controllers/signup.js"></script>
+    <script src="js/controllers/register.js"></script>
     <script src="js/controllers/logout.js"></script>
     <script src="js/contacts.js"></script>
     <script src="js/controllers/userprofile.js"></script>
