Add ability to skip sending code if you already have one

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     <!-- The app javascript files -->
     <script src="js/cordovainit.js"></script>
     <script src="js/controllers/login.js"></script>
-    <script src="js/controllers/signup.js"></script>
+    <script src="js/controllers/verify.js"></script>
     <script src="js/controllers/register.js"></script>
     <script src="js/controllers/logout.js"></script>
     <script src="js/contacts.js"></script>
