Add rollbar support

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,9 @@
     <!-- App stylesheets which are compiled from SCSS are here -->
     <link href="css/app.css" rel="stylesheet">
 
+    <!-- Rollbar file first for logging exceptions -->
+    <script src="js/rollbar.js"></script>
+
     <!-- Vendor things (downloaded from bower) go here -->
     <script src="vendor/ionic/js/ionic.bundle.js"></script>
     <script src="vendor/ngCordova/dist/ng-cordova.js"></script>
