--- a/app/index.html
+++ b/app/index.html
@@ -26,22 +26,24 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- The app javascript files -->
-    <script src="js/cordovainit.js"></script>
-    <script src="js/controllers/login.js"></script>
-    <script src="js/controllers/verify.js"></script>
-    <script src="js/controllers/register.js"></script>
-    <script src="js/controllers/logout.js"></script>
-    <script src="js/contacts.js"></script>
-    <script src="js/controllers/userprofile.js"></script>
+    <!-- The view controllers used by Angular javascript files -->
     <script src="js/controllers/call.js"></script>
+    <script src="js/controllers/contacts.js"></script>
+    <script src="js/controllers/login.js"></script>
+    <script src="js/controllers/logout.js"></script>
+    <script src="js/controllers/register.js"></script>
+    <script src="js/controllers/userprofile.js"></script>
+    <script src="js/controllers/verify.js"></script>
+    <script src="js/cordovainit.js"></script>
 
-    <script src="js/services/peerhandler.js"></script>
-    <script src="js/services/drawinghandler.js"></script>
+    <!-- The various Angular services -->
+    <script src="js/services/apihandler.js"></script>
     <script src="js/services/audiohandler.js"></script>
     <script src="js/services/confighandler.js"></script>
-    <script src="js/services/sockethandler.js"></script>
     <script src="js/services/contactshandler.js"></script>
+    <script src="js/services/drawinghandler.js"></script>
+    <script src="js/services/peerhandler.js"></script>
+    <script src="js/services/sockethandler.js"></script>
 
     <script src="js/app.js"></script>
 
