--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
     <script src="js/services/confighandler.js"></script>
     <script src="js/services/contactshandler.js"></script>
     <script src="js/services/drawinghandler.js"></script>
+    <script src="js/services/modalhandler.js"></script>
     <script src="js/services/peerhandler.js"></script>
     <script src="js/services/sockethandler.js"></script>
 
