--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
     <script src="js/controllers/contacts.js"></script>
     <script src="js/controllers/login.js"></script>
     <script src="js/controllers/logout.js"></script>
+    <script src="js/controllers/quit.js"></script>
     <script src="js/controllers/register.js"></script>
     <script src="js/controllers/userprofile.js"></script>
     <script src="js/controllers/verify.js"></script>
@@ -79,6 +80,7 @@
                 <ul class="list">
                     <!-- Note each link has the 'menu-close' attribute so the menu auto closes when clicking on one of these links -->
                     <a ng-controller="LogoutCtrl" ng-click="logout()" class="item" menu-close>{{'LOG_OUT' | translate}}</a>
+                    <a ng-controller="QuitCtrl" ng-click="exit()" class="item" menu-close>{{'QUIT' | translate}}</a>
                 </ul>
             </ion-content>
         </ion-side-menu>
