Add number formatting filter

--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,9 @@
     <script src="js/services/peerhandler.js"></script>
     <script src="js/services/sockethandler.js"></script>
 
+    <!-- Angular filters for formatting stuff -->
+    <script src="js/filters/contactsfilter.js"></script>
+
     <script src="js/app.js"></script>
 
     <audio class="call" loop>
