Add preliminary support for environment variables

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,9 @@
     <!-- App stylesheets which are compiled from SCSS are here -->
     <link href="css/app.css" rel="stylesheet">
 
+    <!-- Global environment variables that are replaced with Gulp -->
+    <script src="js/env.js"></script>
+
     <!-- Rollbar file first for logging exceptions -->
     <script src="js/rollbar.js"></script>
 
