Spinner to lighter color

--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
                 </ion-nav-back-button>
                 <ion-nav-buttons side="left">
                     <div id="spinner-wrapper" ng-hide="hideLoader">
-                        <ion-spinner id="menu-loader" class="spinner-energized"></ion-spinner>
+                        <ion-spinner id="menu-loader" class="spinner-light"></ion-spinner>
                     </div>
                     </button>
                 </ion-nav-buttons>
