--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
     <script src="js/controllers/logout.js"></script>
     <script src="js/controllers/quit.js"></script>
     <script src="js/controllers/register.js"></script>
+    <script src="js/controllers/settings.js"></script>
     <script src="js/controllers/userprofile.js"></script>
     <script src="js/controllers/verify.js"></script>
     <script src="js/cordovainit.js"></script>
@@ -92,6 +93,7 @@
             <ion-content>
                 <ul class="list">
                     <!-- Note each link has the 'menu-close' attribute so the menu auto closes when clicking on one of these links -->
+                    <a ui-sref="settings" class="item" menu-close>{{'SETTINGS' | translate}}</a>
                     <a ng-controller="LogoutCtrl" ng-click="logout()" class="item" menu-close>{{'LOG_OUT' | translate}}</a>
                     <a ng-controller="QuitCtrl" ng-click="exit()" class="item" menu-close>{{'QUIT' | translate}}</a>
                 </ul>
