--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
             <ion-content>
                 <ul class="list">
                     <!-- Note each link has the 'menu-close' attribute so the menu auto closes when clicking on one of these links -->
-                    <a ui-sref="settings" class="item" menu-close>{{'SETTINGS' | translate}}</a>
+                    <!-- <a ui-sref="settings" class="item" menu-close>{{'SETTINGS' | translate}}</a> -->
                     <a ng-controller="LogoutCtrl" ng-click="logout()" class="item" menu-close>{{'LOG_OUT' | translate}}</a>
                     <a ng-controller="QuitCtrl" ng-click="exit()" class="item" menu-close>{{'QUIT' | translate}}</a>
                 </ul>
