--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,9 @@
     <!-- Global environment variables that are replaced with Gulp -->
     <script src="js/env.js"></script>
 
+    <!-- Disable console if running in production -->
+    <script src="js/disable-console.js"></script>
+
     <!-- Rollbar file first for logging exceptions -->
     <script src="js/rollbar.js"></script>
 
