--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
     <script src="vendor/fabric.js/dist/fabric.js"></script>
     <script src="vendor/draggabilly/dist/draggabilly.pkgd.js"></script>
     <script src="vendor/socket.io-client/socket.io.js"></script>
+    <script src="vendor/recordrtc/RecordRTC.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
