Initial video recording functionality

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
     <script src="vendor/draggabilly/dist/draggabilly.pkgd.js"></script>
     <script src="vendor/socket.io-client/socket.io.js"></script>
     <script src="vendor/recordrtc/RecordRTC.js"></script>
+    <script src="vendor/recordrtc/libs/screenshot-dev.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -58,6 +59,7 @@
     <script src="js/services/drawinghandler.js"></script>
     <script src="js/services/modalhandler.js"></script>
     <script src="js/services/peerhandler.js"></script>
+    <script src="js/services/recordinghandler.js"></script>
     <script src="js/services/sockethandler.js"></script>
 
     <!-- Angular filters for formatting stuff -->
