Add initial call recording

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
     <script src="js/services/peerhandler.js"></script>
     <script src="js/services/recordinghandler.js"></script>
     <script src="js/services/sockethandler.js"></script>
+    <script src="js/services/filehandler.js"></script>
 
     <!-- Angular filters for formatting stuff -->
     <script src="js/filters/contactsfilter.js"></script>
