Add seperate settings module for handling user preferences and such in a handy way

--- a/app/index.html
+++ b/app/index.html
@@ -57,11 +57,12 @@
     <script src="js/services/confighandler.js"></script>
     <script src="js/services/contactshandler.js"></script>
     <script src="js/services/drawinghandler.js"></script>
+    <script src="js/services/filehandler.js"></script>
     <script src="js/services/modalhandler.js"></script>
     <script src="js/services/peerhandler.js"></script>
     <script src="js/services/recordinghandler.js"></script>
+    <script src="js/services/settingshandler.js"></script>
     <script src="js/services/sockethandler.js"></script>
-    <script src="js/services/filehandler.js"></script>
 
     <!-- Angular filters for formatting stuff -->
     <script src="js/filters/contactsfilter.js"></script>
