Add ionic.io library

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
     <script src="vendor/socket.io-client/socket.io.js"></script>
     <script src="vendor/recordrtc/RecordRTC.js"></script>
     <script src="vendor/recordrtc/libs/screenshot-dev.js"></script>
+    <script src="vendor/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
