Add ionic.io injection hack thingy

--- a/app/index.html
+++ b/app/index.html
@@ -35,10 +35,11 @@
     <script src="vendor/socket.io-client/socket.io.js"></script>
     <script src="vendor/recordrtc/RecordRTC.js"></script>
     <script src="vendor/recordrtc/libs/screenshot-dev.js"></script>
-    <script src="vendor/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script>
+    <script src="vendor/ionic-platform-web-client/dist/ionic.io.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
 
     <!-- The view controllers used by Angular javascript files -->
     <script src="js/controllers/call.js"></script>
