Use dry run tracking in development

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <script src="js/services/recordinghandler.js"></script>
     <script src="js/services/settingshandler.js"></script>
     <script src="js/services/sockethandler.js"></script>
+    <script src="js/services/trackinghandler.js"></script>
 
     <!-- Angular filters for formatting stuff -->
     <script src="js/filters/contactsfilter.js"></script>
