--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
 
 
     <!-- The view controllers used by Angular javascript files -->
+    <script src="js/controllers/about.js"></script>
     <script src="js/controllers/call.js"></script>
     <script src="js/controllers/contacts.js"></script>
     <script src="js/controllers/login.js"></script>
@@ -104,6 +105,7 @@
                     <a class="item" ui-sref="tabs.settings" menu-close>{{'SETTINGS' | translate}}</a>
                     <a ng-controller="LogoutCtrl" ng-click="logout()" class="item" menu-close>{{'LOG_OUT' | translate}}</a>
                     <a ng-controller="QuitCtrl" ng-click="exit()" class="item" menu-close>{{'QUIT' | translate}}</a>
+                    <a ng-controller="AboutCtrl" ng-click="showAboutPopup()" class="item" menu-close>{{'ABOUT' | translate}}</a>
                 </ul>
             </ion-content>
         </ion-side-menu>
