--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
     <script src="vendor/draggabilly/dist/draggabilly.pkgd.js"></script>
     <script src="vendor/socket.io-client/socket.io.js"></script>
     <script src="vendor/recordrtc/RecordRTC.js"></script>
+    <script src="vendor/whammy/whammy.js"></script>
     <script src="vendor/recordrtc/libs/screenshot-dev.js"></script>
     <script src="vendor/ionic-platform-web-client/dist/ionic.io.bundle.js"></script>
 
