Add angular-moment files to build system

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,9 @@
     <script src="vendor/socket.io-client/socket.io.js"></script>
     <script src="vendor/recordrtc/RecordRTC.js"></script>
     <script src="vendor/recordrtc/libs/screenshot-dev.js"></script>
+    <script src="vendor/moment/moment.js"></script>
+    <script src="vendor/moment/locale/fi.js"></script>
+    <script src="vendor/angular-moment/angular-moment.min.js"></script>
     <script src="vendor/ionic-platform-web-client/dist/ionic.io.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
