Add Angular notification service wrapper

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <script src="js/services/drawinghandler.js"></script>
     <script src="js/services/filehandler.js"></script>
     <script src="js/services/modalhandler.js"></script>
+    <script src="js/services/notificationhandler.js"></script>
     <script src="js/services/peerhandler.js"></script>
     <script src="js/services/recordinghandler.js"></script>
     <script src="js/services/settingshandler.js"></script>
