Initial debug call handling

--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,7 @@
     <!-- The various Angular services -->
     <script src="js/services/apihandler.js"></script>
     <script src="js/services/audiohandler.js"></script>
+    <script src="js/services/callhandler.js"></script>
     <script src="js/services/confighandler.js"></script>
     <script src="js/services/contactshandler.js"></script>
     <script src="js/services/drawinghandler.js"></script>
@@ -71,7 +72,6 @@
     <script src="js/services/settingshandler.js"></script>
     <script src="js/services/sockethandler.js"></script>
     <script src="js/services/trackinghandler.js"></script>
-
     <!-- Angular filters for formatting stuff -->
     <script src="js/filters/contactsfilter.js"></script>
 
