--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
     <!-- The various Angular services -->
     <script src="js/services/apihandler.js"></script>
     <script src="js/services/audiohandler.js"></script>
-    <script src="js/services/callhandler.js"></script>
+    <script src="js/services/callloghandler.js"></script>
     <script src="js/services/confighandler.js"></script>
     <script src="js/services/contactshandler.js"></script>
     <script src="js/services/drawinghandler.js"></script>
