--- a/app/index.html
+++ b/app/index.html
@@ -43,10 +43,10 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-
     <!-- The view controllers used by Angular javascript files -->
     <script src="js/controllers/about.js"></script>
     <script src="js/controllers/call.js"></script>
+    <script src="js/controllers/calllog.js"></script>
     <script src="js/controllers/contacts.js"></script>
     <script src="js/controllers/login.js"></script>
     <script src="js/controllers/logout.js"></script>
@@ -72,8 +72,6 @@
     <script src="js/services/settingshandler.js"></script>
     <script src="js/services/sockethandler.js"></script>
     <script src="js/services/trackinghandler.js"></script>
-    <!-- Angular filters for formatting stuff -->
-    <script src="js/filters/contactsfilter.js"></script>
 
     <script src="js/app.js"></script>
 </head>
