--- a/app/index.html
+++ b/app/index.html
@@ -58,20 +58,20 @@
     <script src="js/cordovainit.js"></script>
 
     <!-- The various Angular services -->
-    <script src="js/services/apihandler.js"></script>
-    <script src="js/services/audiohandler.js"></script>
-    <script src="js/services/callloghandler.js"></script>
-    <script src="js/services/confighandler.js"></script>
-    <script src="js/services/contactshandler.js"></script>
-    <script src="js/services/drawinghandler.js"></script>
-    <script src="js/services/filehandler.js"></script>
-    <script src="js/services/modalhandler.js"></script>
-    <script src="js/services/notificationhandler.js"></script>
-    <script src="js/services/peerhandler.js"></script>
-    <script src="js/services/recordinghandler.js"></script>
-    <script src="js/services/settingshandler.js"></script>
-    <script src="js/services/sockethandler.js"></script>
-    <script src="js/services/trackinghandler.js"></script>
+    <script src="js/services/apifactory.js"></script>
+    <script src="js/services/audiofactory.js"></script>
+    <script src="js/services/calllogfactory.js"></script>
+    <script src="js/services/configfactory.js"></script>
+    <script src="js/services/contactsfactory.js"></script>
+    <script src="js/services/drawingfactory.js"></script>
+    <script src="js/services/filefactory.js"></script>
+    <script src="js/services/modalfactory.js"></script>
+    <script src="js/services/notificationfactory.js"></script>
+    <script src="js/services/peerfactory.js"></script>
+    <script src="js/services/recordingfactory.js"></script>
+    <script src="js/services/settingsfactory.js"></script>
+    <script src="js/services/socketfactory.js"></script>
+    <script src="js/services/trackingfactory.js"></script>
 
     <script src="js/app.js"></script>
 </head>
