--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <script src="js/services/contactsfactory.js"></script>
     <script src="js/services/drawingfactory.js"></script>
     <script src="js/services/filefactory.js"></script>
+    <script src="js/services/logoutfactory.js"></script>
     <script src="js/services/modalfactory.js"></script>
     <script src="js/services/notificationfactory.js"></script>
     <script src="js/services/peerfactory.js"></script>
@@ -72,7 +73,6 @@
     <script src="js/services/settingsfactory.js"></script>
     <script src="js/services/socketfactory.js"></script>
     <script src="js/services/trackingfactory.js"></script>
-
     <script src="js/app.js"></script>
 </head>
 
